--- a/css/styles.css
+++ b/css/styles.css
@@ -38,28 +38,126 @@
   justify-content: space-between;
   align-items: center;
   background-color: #e9e9e9;
-  padding: 0 16px; /* Add padding for horizontal spacing */
+  /*padding: 0 16px;  Add padding for horizontal spacing */
   height: 70px;
+  width: 100%;
+  padding: 0px 0px 0px 0px;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  
+}
+
+.topnav .topnav-left-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /*flex-direction: row;*/
+  flex-wrap:nowrap;
+  background-color: #e9e9e9;
+  /*padding: 0 16px;  Add padding for horizontal spacing */
+  
+  height: 100%;
+  width: 30%;
+  /*padding: 0px 0px 0px 0px;*/
+  padding-left: 3%;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  
+  column-gap: 10%;
+  row-gap: 10%;
+  
+  
+}
+
+.topnav .center-section{
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 34%;
+  padding: 0% 0% 0% 0%;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  flex-wrap:nowrap;
+  
+}
+
+.topnav .topnav-left-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap:nowrap;
+  background-color: #e9e9e9;
+  /*padding: 0 16px;  Add padding for horizontal spacing */
+  
+  height: 100%;
+  width: 30%;
+  /*padding: 0px 0px 0px 0px;*/
+  padding-left: 3%;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  
+  column-gap: 10%;
+  row-gap: 10%;
+  
+}
+
+.topnav .topnav-left-section .logo-menu{
+  display: flex;  
+  align-items: center;
+  height: 100%;
+  width: 25%;
+  padding: 0% 0% 0% 0%;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+}
+
+.topnav .topnav-left-section .menu{
+  display: flex;  
+  align-items: center;
+  height: 100%;
+  width: 73%;
+  padding: 0% 0% 0% 0%;
+  padding-left: 2%;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  vertical-align: middle;
+  text-align: center;
 }
 
 /* Logo and Menu Section */
+/*
 .logo-menu {
   display: flex;
   align-items: center;
-  gap: 10px; /* Space between the logo and the menu */
+  height: 100%;
+  width: 34%;
+  padding: 0% 0% 0% 0%;
+  border-width: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  
+  
 }
-
+*/
+/*column-gap: 0px;
+  row-gap: 10px;*/
+  /*gap: 10px;  Space between the logo and the menu */
+/*
 .menu {
   display: flex;
-  gap: 10px; /* Space between menu items */
-}
+  gap: 10px; /* Space between menu items 
+}*/
 
 .menu a {
   color: black;
   text-decoration: none;
   font-size: 17px;
   text-align: center;
-  padding: 14px 16px;
+  align-items: center;
+  height: 100%;
+  padding-left: 20%;
+  vertical-align: middle;
+  /*padding: 14px 16px;*/
 }
 
 .menu a:hover {
